--- a/index.html
+++ b/index.html
@@ -1,10 +1,277 @@
-<!DOCTYPE>
-<lang="es">
-<html>
- <head>
- <title>Hola Mundo</title>
- </head>
- <body>
-   <p>Hola Mundo</p>
- </body>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+  <title>Escuela Dr. Reinaldo Espinosa</title>
+  <meta content="" name="description">
+  <meta content="" name="keywords">
+
+  <!-- Favicons -->
+  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Jost:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+
+  <!-- Vendor CSS Files -->
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+
+  <!-- Template Main CSS File -->
+  <link href="assets/css/style.css" rel="stylesheet">
+
+  <!-- =======================================================
+  * Template Name: Arsha - v4.10.0
+  * Template URL: https://bootstrapmade.com/arsha-free-bootstrap-html-template-corporate/
+  * Author: BootstrapMade.com
+  * License: https://bootstrapmade.com/license/
+  ======================================================== -->
+</head>
+
+<body>
+
+  <!-- ======= Header ======= -->
+  <header id="header" class="fixed-top ">
+    <div class="container d-flex align-items-center">
+
+      <h1 class="logo me-auto"><a href="index.html">Inicio</a></h1>
+      <!-- Uncomment below if you prefer to use an image logo -->
+      <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+
+      <nav id="navbar" class="navbar">
+        <ul>
+          <li><a class="nav-link scrollto active" href="#about">Sobre nosotros</a></li>
+          <li><a class="nav-link scrollto" href="#hero">Misión</a></li>
+          <li><a class="nav-link scrollto" href="#services">Visión</a></li>
+          <li><a class="nav-link scrollto" href="#team">Autoridades</a></li>
+          <li><a class="getstarted scrollto" href="#contact">Contact</a></li>
+        </ul>
+        <i class="bi bi-list mobile-nav-toggle"></i>
+      </nav><!-- .navbar -->
+
+    </div>
+  </header><!-- End Header -->
+
+  <!-- ======= Hero Section ======= -->
+  <section id="hero" class="d-flex align-items-center">
+
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
+          <h1>DR REINALDO ESPINOSA AGUILAR</h1>
+          <h2>ESCUELA DE EDUCACION BASICA</h2>
+          <div class="d-flex justify-content-center justify-content-lg-start">
+            <a href="#about" class="btn-get-started scrollto">Sobre nosotros</a>
+          </div>
+        </div>
+        <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
+          <img src="assets/img/hero-img.png" class="img-fluid animated" alt="Escudo Escuela Dr. Reinaldo Espinosa">
+        </div>
+      </div>
+    </div>
+
+  </section><!-- End Hero -->
+
+  <main id="main">
+
+    <!-- ======= About Us Section ======= -->
+    <section id="about" class="about">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+          <h2>Sobre Nosotros</h2>
+        </div>
+
+        <div class="row content">
+          <div class="col-lg-12">
+            <p>
+              El ESCUELA DE EDUCACION BASICA DR REINALDO ESPINOSA AGUILAR se encuentra ubicado en la provincia de Loja, en el cantón Loja de la parroquia Sucre. Es un centro educativo de Ecuador perteneciente a la Zona 7 geográficamente es un centro educativo urbano, su modalidad es Presencial en jornada Matutina, con tipo de educación regular y con nivel educativo: Inicial y EGB.
+            </p>
+            <p>
+              Institución educativa que obtiene sus recursos para desarrollar sus actividade (Sostenimiento) de manera Fiscal, está en el régimen escolar Sierra y se puede llegar al establecimiento de manera terrestre.
+            </p>
+          </div>
+        </div>
+
+      </div>
+    </section><!-- End About Us Section -->
+    <!-- ======= Services Section ======= -->
+    <section id="services" class="services section-bg">
+      <div class="container" data-aos="fade-up">
+
+        <div class="row">
+          <div class="col-xl-6 col-md-12 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+            <div class="icon-box">
+              <div class="icon"><i class="bx bxl-dribbble"></i></div>
+              <h4><a href="">Misión</a></h4>
+              <p>La Escuela de Educación General Básica “Dr. Reinaldo Espinosa Aguilar’, Ubicada en la ciudadela del mismo nombre, suroccidente de la ciudad de Loja, ofrece a la comunidad de los sectores sociales vecinos, una educación de calidad y calidez en los niveles de: Educación Inicial y Educación General Básica, potenciando en losestudiantes a la práctica de valores que contribuyen a la formación integral de su personalidad y autoestima garantizando una educación igualitaria, incluyente, potenciando capacidades, habilidades y destrezas para que puedan insertarse en la vida práctica. A través de la Pedagogía Crítica, Cognitiva, Constructivista, hacemos de nuestros educandos entes reflexivos y propositivos, capaces de asumir compromisos consigo mismo y con los demás.</p>
+            </div>
+          </div>
+
+          <div class="col-xl-6 col-md-12 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
+            <div class="icon-box">
+              <div class="icon"><i class="bx bx-file"></i></div>
+              <h4><a href="">Visión</a></h4>
+              <p>Somos una Institución Fiscal Mixta que se proyecta hacia el 2020 con una educación sustentada en valores y principios, derechos humanos, equidad e inclusión; con directivos y docentes idóneos, profesionales en las diferentes áreas de la educación;
+              comprometidos institucional y socialmente, capaces de convertirse en mediadores de los aprendizajes, promoviendo en sus alumnos una formación integral, con elevado nivel de razonamiento lógico, crítico y creativo; capaces de asumir la responsabilidad de construir colectiva e individualmente sus propios aprendizajes, enfocados en los problemas de su realidad; y padres de familia comprometidos en el desarrollo integral de sus hijos y el adelanto de la institución. Proponemos un modelo de autogestión compartido entre todos los miembros de la comunidad educativa para conseguir: recursos didácticos humanos y la infraestructura física que permita un proceso de aprendizaje. Nuestra institución educativa se constituirá en unos de los primeros centros del sur occidente de la ciudad de Loja, formador de niños, niñas y jóvenes con fundamentos académicos y humanistas de calidad.</p>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section><!-- End Services Section -->
+
+    <!-- ======= Cta Section ======= -->
+    <section id="cta" class="cta">
+      <div class="container" data-aos="zoom-in">
+
+        <div class="row">
+          <div class="col-lg-6 text-center text-lg-start">
+            <h3>Valores institucionales</h3>
+            <p>De la exigencia de sus padres y de su ejemplo dependerá que incorporen en su conducta el hábito de ser puntual, tanto para concurrir a una cita como para presentar un trabajo en el tiempo establecido. Como estos criterios, la puntualidad se aprende en la infancia, si los padres no valoran el tiempo de los demás, será difícil que lo hagan.
+            </p>
+            <p>
+              “Para crecer y hacer más firme este valor en tu vida, puedes iniciar con estas sugerencias:
+            </p>
+          </div>
+          <div class="col-lg-6  text-center">
+           <p>Examínate y descubre las causas de tu impuntualidad: pereza, desorden, irresponsabilidad, olvido, entre otras.</p>
+           <p>Reducir distracciones y descansos a lo largo del día; levantarse más temprano para terminar tu arreglo personal con oportunidad; colocar el despertador más lejos...</p>
+           <p>Aunque sea algo tedioso, elabora por escrito tu horario y plan de actividad del día siguiente.</p>
+           <p>Vivir el valor de la puntualidad es una forma de ser a los demás la vida más agradable, mejora nuestra orden y nos convierte en personas dignas de confianza”</p>
+          </div>
+        </div>
+
+      </div>
+    </section><!-- End Cta Section -->
+
+
+    <!-- ======= Team Section ======= -->
+    <section id="team" class="team section-bg">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+          <h2>AUTORIDADES</h2>
+        </div>
+
+        <div class="row">
+
+          <div class="col-lg-6">
+            <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="150">
+              <div class="pic"><img src="assets/img/team/team-1.jpg" class="img-fluid" alt="Rectora Escuela Dr. Reinaldo Espinosa Aguilar"></div>
+              <div class="member-info">
+                <h4>Carmen Esperanza</h4>
+                <h4>Benitez Alulima</h4>
+                <span>Rectora</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-6 mt-4 mt-lg-0">
+            <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="100">
+              <div class="pic"><img src="assets/img/team/team-2.jpg" class="img-fluid" alt="DECE Escuela Dr. Reinaldo Espinosa Aguilar"></div>
+              <div class="member-info">
+                <h4>David Fabricio</h4>
+                <h4>Armijos Morocho</h4>
+                <span>Departamento DECE</span>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </section><!-- End Team Section -->
+
+    <!-- ======= Contact Section ======= -->
+    <section id="contact" class="contact">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+          <h2>Contacto</h2>
+        </div>
+
+        <div class="row">
+
+          <div class="col-lg-6 d-flex align-items-stretch">
+            <div class="info">
+              <div class="address">
+                <i class="bi bi-geo-alt"></i>
+                <h4>Localización:</h4>
+                <p>Albania y Dinamarca, Loja - Ecuador</p>
+              </div>
+
+              <div class="email">
+                <i class="bi bi-envelope"></i>
+                <h4>Correo:</h4>
+                <p>escuelareinaldoe@gmail.com</p>
+              </div>
+
+              <div class="phone">
+                <i class="bi bi-phone"></i>
+                <h4>Celular:</h4>
+                <p>+593 9999 9999 99</p>
+              </div>
+              <div class="Facebook">
+                <i class="bi bi-facebook"></i>
+                <h4>Facebook:</h4>
+                <p><a href="https://www.facebook.com/profile.php?id=100072120080652">Escuela "Dr. Reinaldo Espinosa Aguilar"</a></p>
+              </div>
+          </div>
+        </div>
+
+        <div class="col-lg-6 d-flex align-items-stretch">
+            <div class="info">
+              <div class="container">
+               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1281.3515025337197!2d-79.21970267058836!3d-4.014741836194668!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91cb37ebb29ae907%3A0x93bc14586feedf07!2sEsc.%20Reinaldo%20Espinosa%20Aguilar!5e0!3m2!1ses-419!2sbg!4v1674781130769!5m2!1ses-419!2sbg" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>
+            </div>
+        </div>
+      </div>
+
+
+        </div>
+      </div>
+      
+    </section><!-- End Contact Section -->
+
+  </main><!-- End #main -->
+
+  <!-- ======= Footer ======= -->
+  <footer id="footer">
+    <div class="container footer-bottom clearfix">
+      <div class="copyright">
+        &copy; Copyright <strong><span>Juan Benites</span></strong>. Todos los derechos reservados
+      </div>
+      <div class="credits">
+         <a href="https://github.com/jnbenites" class="github"><i class="bi bi-github"></i></i></a>
+         <a href="https://www.linkedin.com/in/jnbenites/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+      </div>
+    </div>
+  </footer><!-- End Footer -->
+
+  <div id="preloader"></div>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+
+  <!-- Vendor JS Files -->
+  <script src="assets/vendor/aos/aos.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
+
+  <!-- Template Main JS File -->
+  <script src="assets/js/main.js"></script>
+</body>
+
 </html>
