--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Escuela Dr. Reinaldo Espinosa</title>
+  <title>Escuela Dr. Reinaldo Espinosa Aguilar</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+
+  <link href="assets/img/hero-img.png" rel="icon">
+  <link href="assets/img/hero-img.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Jost:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -52,7 +53,7 @@
           <li><a class="nav-link scrollto" href="#hero">Misión</a></li>
           <li><a class="nav-link scrollto" href="#services">Visión</a></li>
           <li><a class="nav-link scrollto" href="#team">Autoridades</a></li>
-          <li><a class="getstarted scrollto" href="#contact">Contact</a></li>
+          <li><a class="getstarted scrollto" href="#contact">Contacto</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -72,7 +73,7 @@
             <a href="#about" class="btn-get-started scrollto">Sobre nosotros</a>
           </div>
         </div>
-        <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
+        <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="100">
           <img src="assets/img/hero-img.png" class="img-fluid animated" alt="Escudo Escuela Dr. Reinaldo Espinosa">
         </div>
       </div>
@@ -166,7 +167,7 @@
 
           <div class="col-lg-6">
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="150">
-              <div class="pic"><img src="assets/img/team/team-1.jpg" class="img-fluid" alt="Rectora Escuela Dr. Reinaldo Espinosa Aguilar"></div>
+              <div class="pic"><img src="assets/img/team/team-1.png" class="img-fluid" alt="Rectora Escuela Dr. Reinaldo Espinosa Aguilar"></div>
               <div class="member-info">
                 <h4>Carmen Esperanza</h4>
                 <h4>Benitez Alulima</h4>
@@ -177,7 +178,7 @@
 
           <div class="col-lg-6 mt-4 mt-lg-0">
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="100">
-              <div class="pic"><img src="assets/img/team/team-2.jpg" class="img-fluid" alt="DECE Escuela Dr. Reinaldo Espinosa Aguilar"></div>
+              <div class="pic"><img src="assets/img/team/team-2.png" class="img-fluid" alt="DECE Escuela Dr. Reinaldo Espinosa Aguilar"></div>
               <div class="member-info">
                 <h4>David Fabricio</h4>
                 <h4>Armijos Morocho</h4>
@@ -230,9 +231,7 @@
 
         <div class="col-lg-6 d-flex align-items-stretch">
             <div class="info">
-              <div class="container">
-               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1281.3515025337197!2d-79.21970267058836!3d-4.014741836194668!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91cb37ebb29ae907%3A0x93bc14586feedf07!2sEsc.%20Reinaldo%20Espinosa%20Aguilar!5e0!3m2!1ses-419!2sbg!4v1674781130769!5m2!1ses-419!2sbg" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-              </div>
+               <iframe class="container" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1281.3515025337197!2d-79.21970267058836!3d-4.014741836194668!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91cb37ebb29ae907%3A0x93bc14586feedf07!2sEsc.%20Reinaldo%20Espinosa%20Aguilar!5e0!3m2!1ses-419!2sbg!4v1674781130769!5m2!1ses-419!2sbg" width="100%" height="100%" style="border:0;" allowfullscreen="yes" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
       </div>
@@ -248,9 +247,6 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container footer-bottom clearfix">
-      <div class="copyright">
-        &copy; Copyright <strong><span>Juan Benites</span></strong>. Todos los derechos reservados
-      </div>
       <div class="credits">
          <a href="https://github.com/jnbenites" class="github"><i class="bi bi-github"></i></i></a>
          <a href="https://www.linkedin.com/in/jnbenites/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
