--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="#about">Sobre nosotros</a></li>
-          <li><a class="nav-link scrollto" href="#hero">Misión</a></li>
+          <li><a class="nav-link scrollto" href="#services">Misión</a></li>
           <li><a class="nav-link scrollto" href="#services">Visión</a></li>
           <li><a class="nav-link scrollto" href="#team">Autoridades</a></li>
           <li><a class="getstarted scrollto" href="#contact">Contacto</a></li>
